--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
-    "emailjs-com": "^3.2.0",
     "react": "^19.1.0",
-    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
+    "homepage": "https://www.cacaoorigendelvalle.com",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
