--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mi-tienda",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "./",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.9.0",
